# fam-auth

./: .gitignore  README.md  alembic.ini  pyproject.toml  sample-settings.ini
docs/: initial.md
docs/source/: conf.py  index.rst  models.rst  repository.rst  routers.rst  schemas.rst  user.rst
migrations/: env.py
migrations/versions/: 2967a15e053f_create_users_table.py  2d2b821846a4_change_user_id_type.py  a5cae8bc42e3_add_fields_to_user.py  df3d8108c878_add_timezone.py
src/: dependencies.py  exceptions.py  main.py
src/core/: database.py  routers.py  settings.py
src/models/: user.py
src/repository/data_access/manager/: user.py
src/repository/data_access/querysets/: user.py
src/routers/: user.py
src/schemas/: __init__.py  user.py
src/utils/: regular_expressions.py
