[tool.poetry]
name = "fam-auth"
version = "0.1.0"
description = "A modular authentication package for FastAPI with optional OTP and role features."
authors = ["Arash Mohtarami <arashmohtarami.aa@gmail.com>"]
# license = "MIT"
# readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
alembic = "^1.14.1"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.10.6"}
python-decouple = "^3.8"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^3.0.1"
sphinx-rtd-theme = "^3.0.2"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.extras]
# otp = ["otp"]
# role = ["role"]

